<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channel_name" />

    <EditText
        android:id="@+id/channel_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channel_description" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_channel" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>