<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="48dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/splash" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:enabled="false"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:hint="@string/status" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>